--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
       <title> My first MapoxGL map </title>
        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
-      <link rel="stylesheet" href="main.css"/>
+      <link rel="stylesheet" href="css/main.css"/>
         <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
     </head>
   <body>
