--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,6 @@
     </head>
   <body>
     <div id="map"></div>
-     <script src="main.js"></script>
+     <script src="js/main.js"></script>
   </body>
 </html>
